// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view-tab-widgets Renders \`view-tab-widgets\` with default and required props 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <!---->
  <div
    class="grid-layout grid-layout--disabled"
    style="padding: 20px; column-gap: 20px; grid-template-columns: repeat(12, 1fr); max-width: 100%;"
  >
    <!---->
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with editing mode 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
    
        Portal to: additional-top-bar-items
        
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
   
  <div
    class="grid-layout"
    style="height: 20px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder primary darken-1 v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
       
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
     
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with editing mode without visible 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
        Portal to: additional-top-bar-items
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout grid-layout--disabled"
    style="padding: 20px; column-gap: 20px; grid-template-columns: repeat(12, 1fr); max-width: 100%;"
  >
    <!---->
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <!---->
  <div
    class="grid-layout grid-layout--disabled"
    style="padding: 20px; column-gap: 20px; grid-template-columns: repeat(12, 1fr); max-width: 100%;"
  >
    <!---->
    <div
      class="grid-item v-card v-sheet theme--light grid-item--disabled"
      style="margin: 10px 0px; grid-column-start: 1; grid-column-end: 13; grid-row-start: 1; grid-row-end: 15; height: auto;"
    >
      <div>
        <!---->
        <widget-wrapper-stub
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <!---->
    </div>
    <div
      class="grid-item v-card v-sheet theme--light grid-item--disabled"
      style="margin: 10px 0px; grid-column-start: 1; grid-column-end: 13; grid-row-start: 15; grid-row-end: 39; height: auto;"
    >
      <div>
        <!---->
        <widget-wrapper-stub
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <!---->
    </div>
    <div
      class="grid-item v-card v-sheet theme--light grid-item--disabled"
      style="margin: 10px 0px; grid-column-start: 1; grid-column-end: 13; grid-row-start: 39; grid-row-end: 60; height: auto;"
    >
      <div>
        <!---->
        <widget-wrapper-stub
          tab="[object Object]"
          widget="[object Object]"
        />
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 'l' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
        Portal to: additional-top-bar-items
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 1260px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder primary darken-1 v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 280px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,320px, 0); width: -40px; height: 480px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,820px, 0); width: -40px; height: 420px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 'm' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
        Portal to: additional-top-bar-items
    <window-size-field-stub
      color="white"
      light="true"
      value="mobile"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 580px; max-width: 450px;"
  >
    <div
      class="grid-item grid-layout__placeholder primary darken-1 v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -25px; height: 240px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,280px, 0); width: -25px; height: 240px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,540px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 't' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
        Portal to: additional-top-bar-items
    <window-size-field-stub
      color="white"
      light="true"
      value="tablet"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 140px; max-width: 900px;"
  >
    <div
      class="grid-item grid-layout__placeholder primary darken-1 v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,60px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,100px, 0); width: -40px; height: 20px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets on 'xl' window size 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
        Portal to: additional-top-bar-items
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 1260px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder primary darken-1 v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 280px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,320px, 0); width: -40px; height: 480px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,820px, 0); width: -40px; height: 420px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`view-tab-widgets Renders \`view-tab-widgets\` with widgets with editing mode 1`] = `
<div
  class="view"
  id="view-tab-tab-id"
>
  <div
    class="portal"
  >
        Portal to: additional-top-bar-items
    <window-size-field-stub
      color="white"
      light="true"
      value="desktop"
    />
  </div>
  <div
    class="grid-layout"
    style="height: 1260px; max-width: 100%;"
  >
    <div
      class="grid-item grid-layout__placeholder primary darken-1 v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: 0px; height: 0px; position: absolute; display: none;"
    >
      <div />
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,20px, 0); width: -40px; height: 280px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,320px, 0); width: -40px; height: 480px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="grid-item v-card v-sheet theme--light"
      style="transform: translate3d(20px,820px, 0); width: -40px; height: 420px; position: absolute;"
    >
      <div>
        <widget-edit-drag-handler-stub
          autoheight="true"
          tab="[object Object]"
          widget="[object Object]"
        />
        <widget-wrapper-stub
          editing="true"
          tab="[object Object]"
          visible="true"
          widget="[object Object]"
        />
      </div>
      <div
        class="grid-item__resize-handler"
      >
        <span
          aria-hidden="true"
          class="v-icon notranslate theme--light"
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            class="resize_right-svg-icon v-icon__component theme--light"
            fill="currentColor"
            style="font-size: 16px; height: 16px; width: 16px;"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m14.228 16.227a1 1 0 0 1 -.707-1.707l1-1a1 1 0 0 1 1.416 1.414l-1 1a1 1 0 0 1 -.707.293zm-5.638
   0a1 1 0 0 1 -.707-1.707l6.638-6.638a1 1 0 0 1 1.416 1.414l-6.638 6.638a1 1 0 0 1 -.707.293zm-5.84 0a1
    1 0 0 1 -.707-1.707l12.477-12.477a1 1 0 1 1 1.415 1.414l-12.478 12.477a1 1 0 0 1 -.707.293z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
